--- a/server/build.gradle
+++ b/server/build.gradle
@@ -17,13 +17,15 @@ configurations {
 
 repositories {
 	mavenCentral()
-	mavenLocal()
+	flatDir {
+		dirs 'libs'
+	}
 }
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'com.davidagood:redis-client:1.0.0-SNAPSHOT'
+	implementation name: 'redis-client-1.0.0-SNAPSHOT'
 	implementation 'redis.clients:jedis:3.1.0'
 	implementation 'org.slf4j:slf4j-api:1.7.28'
 	implementation 'ch.qos.logback:logback-classic:1.2.3'
