Added support for running the entire stack via Docker compose Fixed locked response issue in fetch util Added support for overriding default Redis host and port via env vars

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -1,8 +1,17 @@
+buildscript {
+	dependencies {
+		classpath('gradle.plugin.com.palantir.gradle.docker:gradle-docker:0.13.0')
+	}
+}
+
 plugins {
 	id 'org.springframework.boot' version '2.1.7.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.8.RELEASE'
 	id 'java'
+//	id 'com.palantir.docker'
 }
+
+apply plugin: 'com.palantir.docker'
 
 group = 'com.davidagood'
 version = '1.0.0-SNAPSHOT'
@@ -35,4 +44,15 @@ dependencies {
 
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+}
+
+task unpack(type: Copy) {
+	dependsOn bootJar
+	from(zipTree(tasks.bootJar.outputs.files.singleFile))
+	into("build/dependency")
+}
+docker {
+	name "paltamadura/redis-browser-server"
+	copySpec.from(tasks.unpack.outputs).into("dependency")
+	buildArgs(['DEPENDENCY': "dependency"])
 }
